--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.3.0",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.18",
     "nodemon": "^2.0.6",
